--- a/backend/package.json
+++ b/backend/package.json
@@ -20,3 +20,10 @@
     "nodemon": "^3.0.3"
   }
 }
+https://github.com/leslyk29/auth-app
+git init
+git add .
+git commit -m "initial commit"
+git remote add origin https://github.com/leslyk29/auth-app.git
+git branch -M main
+git push -u origin main
